-----------------------------------------------------

0.01  2015-11-13
  - First began notejam outline for Mojolicious.