@@ -18,3 +18,4 @@ nytprof.out
 *.o
 *.bs
 /_eumm/
+note_jam.db
