@@ -2,3 +2,11 @@
 
 Unified sample web app for Mojolicious. The easy way to learn web frameworks.
 http://notejam.net
+
+## Installation
+
+Create database schema
+
+```bash
+$ sqlite3 note_jam.db < schema.sql
+```
