@@ -1,0 +1,2 @@
+requires 'DBD::SQLite';
+requires 'Mojolicious', 6.14;
