@@ -1,0 +1,24 @@
+package NoteJam::Controller::Notes;
+use Mojo::Base 'Mojolicious::Controller';
+
+sub create {
+  my $c = shift;
+  $c->render(text => '');
+}
+
+sub delete {
+  my $c = shift;
+  $c->render(text => '');
+}
+
+sub edit {
+  my $c = shift;
+  $c->render(text => '');
+}
+
+sub show {
+  my $c = shift;
+  $c->render(text => '');
+}
+
+1;
