@@ -1,0 +1,1 @@
+{db => 'note_jam.db', secrets => ['s3cret']};
