@@ -2,3 +2,4 @@
 
 0.01  2015-11-13
   - First began notejam outline for Mojolicious.
+  - Added simple notejam outline.
